--- a/interview_html/package.json
+++ b/interview_html/package.json
@@ -18,6 +18,7 @@
     "es6-promise": "^3.2.1",
     "fetch-ie8": "^1.4.2",
     "fetch-jsonp": "^1.0.0",
+    "gsap": "^1.19.0",
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-clean": "^0.3.1",
@@ -33,6 +34,7 @@
     "gulp-swig": "^0.8.0",
     "gulp-uglify": "^1.4.1",
     "gulp-zip": "^3.0.2",
+    "jquery": "^3.1.1",
     "swig": "^1.4.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
