--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fpg-interview-dev",
+  "name": "fpg-interview",
   "version": "1.0.0",
   "description": "built for FPG interview test",
   "main": "index.js",
